--- a/ECOM_EXAMPLE.html
+++ b/ECOM_EXAMPLE.html
@@ -10,25 +10,21 @@
 <body>
 
 <div class="firstdiv">
-<p class="starter">Starterkit</p>
+<div class="firstdiv_div1" > <p class="starter">Starterkit</p></div>
 
 
- <div class="center" style="height:30px;width:400px;border: 1px solid #D1D3D6; align-self: stretch; "><input 	style="height:25px;width:300px;float:left;border:none;margin-left:7px;" type="text" id="Search" name="Search" placeholder="Search for...">
- <i class="fa fa-search" style="height:30px;width:40px;font-size:25px; margin-top:4px; color:#2797EA;float:right;" ></i>
- </div>
+<div class="firstdiv_div2" > <div  style="height:30px;width:300px;border: 1px solid #D1D3D6; margin-left:180px;  ">
+<input 	style="height:25px;width:250px;float:left;border:none;margin-left:7px;" type="text" id="Search" name="Search" placeholder="Search for...">
+ <i class="fa fa-search" style="height:30px;width:40px;font-size:25px;  color:#2797EA;float:right;" ></i>
+ </div></div>
 
-<i class="fa fa-user" style=" margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 87%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  font-size: 35px;color:#2797EA;float:right;
-  justify-content:flex-start;
-	max-width:10px;
-  "></i>
+<div class="firstdiv_div3" >
+<i class="fa fa-user" style=" 
+  font-size: 35px;color:#2797EA; 
+  
+ position:relative; display: inline-block; "></i>
 <button class="paybutton1" type="button" >117 USD</button>
-
+</div>
 
 </div>
 
