--- a/ECOM_EXAMPLE.html
+++ b/ECOM_EXAMPLE.html
@@ -13,15 +13,15 @@
 <div class="firstdiv_div1" > <p class="starter">Starterkit</p></div>
 
 
-<div class="firstdiv_div2" > <div  style="height:30px;width:300px;border: 1px solid #D1D3D6; margin-left:180px;  ">
-<input 	style="height:25px;width:250px;float:left;border:none;margin-left:7px;" type="text" id="Search" name="Search" placeholder="Search for...">
+<div class="firstdiv_div2" > 
+<input 	style="height:27px;width:320px;float:left;border:none;" type="text" id="Search" name="Search" placeholder="Search for...">
  <i class="fa fa-search" style="height:30px;width:40px;font-size:25px;  color:#2797EA;float:right;" ></i>
- </div></div>
+ </div>
 
 <div class="firstdiv_div3" >
 <i class="fa fa-user" style=" 
   font-size: 35px;color:#2797EA; 
-  
+  width:195;
  position:relative; display: inline-block; "></i>
 <button class="paybutton1" type="button" >117 USD</button>
 </div>
@@ -424,11 +424,14 @@
 
 <br>
 <div class="Loveproduct">
-<p class="lovep">Love those products?<span class="check">Check more from the</span> <u class="uunderlinep"> Category</u></p> 
-<p class="showmore">Show more</p>
+<div class="lovep">Love those products?<span style="font-size:15px;
+	font-family: Arial, Helvetica, sans-serif;
+	color:#BEBFC1;
+	font-weight:none;">Check more from the</span> <u style="color:#2797EA;"> Category</u></div> 
+<div class="showmore">Show more</div>
 
 
-</div >
+</div>
 
 <br>
 
