--- a/ECOM_EXAMPLE.html
+++ b/ECOM_EXAMPLE.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
+
 <div class="firstdiv">
 <div class="firstdiv_div1" > <p style="font-family: Times New Roman, Times, serif;
 color:#2797EA;
@@ -374,25 +375,35 @@ height:40px;
 </div>
 
 <div class="grid-item2">
-<div class="Imgdiv"> <img src="icon.png" class ="center" alt="Product" width="50" height="50px"></div>
+<div class="Imgdiv"> <img src="icon.png" class ="center" alt="Product"  height="50px"></div>
 <p class="la">Space for product name belongs here</p>
-<p class="la2">36.99 USD</p>
+<p style="font-family: Times New Roman, Times, serif;
+color:#2797EA;">36.99 USD </p>
 
-<br>
-<br>
+ 
+<p >
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+</p>
 
- <div  class="starrating" >
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-</div>
-<p class="reviews"><u>183 reviews</u></p>
+<p style="font-family: Times New Roman, Times, serif;
+	
+	color:#BEBFC1;
+	font-size:22px;"><u>183 reviews</u></p>
 
-<br>
-<label class="labe">1 pcs</label>
+
+<p><span style="border: 2px solid #D1D3D6;
+background-color:white;
+font-size:18px;	
+color:#AEB6C2;
+float:left;
+height:40px;
+">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
+</p>
 
 </div>
 
