--- a/ECOM_EXAMPLE.html
+++ b/ECOM_EXAMPLE.html
@@ -170,7 +170,8 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
@@ -203,7 +204,8 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
@@ -236,7 +238,8 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
@@ -269,7 +272,8 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
@@ -302,7 +306,8 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
@@ -334,40 +339,8 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
-">1 pcs</span> 
-<button class="addtochart" type="button">Add to cart</button>
-</p>
-
-</div>
-
-<div class="grid-item2">
-<div class="Imgdiv"> <img src="icon.png" class ="center" alt="Product"  height="50px"></div>
-<p class="la">Space for product name belongs here</p>
-<p style="font-family: Times New Roman, Times, serif;
-color:#2797EA;">36.99 USD </p>
-
- 
-<p >
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-<span class="fa fa-star checked"></span>
-</p>
-
-<p style="font-family: Times New Roman, Times, serif;
-	
-	color:#BEBFC1;
-	font-size:22px;"><u>183 reviews</u></p>
-
-
-<p><span style="border: 2px solid #D1D3D6;
-background-color:white;
-font-size:18px;	
-color:#AEB6C2;
-float:left;
-height:40px;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
@@ -400,7 +373,8 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
@@ -433,7 +407,8 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
@@ -466,7 +441,8 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
@@ -499,7 +475,8 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
@@ -532,7 +509,42 @@ background-color:white;
 font-size:18px;	
 color:#AEB6C2;
 float:left;
-height:40px;
+height:20px;
+padding:20px;
+">1 pcs</span> 
+<button class="addtochart" type="button">Add to cart</button>
+</p>
+
+</div>
+
+<div class="grid-item2">
+<div class="Imgdiv"> <img src="icon.png" class ="center" alt="Product"  height="50px"></div>
+<p class="la">Space for product name belongs here</p>
+<p style="font-family: Times New Roman, Times, serif;
+color:#2797EA;">36.99 USD </p>
+
+ 
+<p >
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+</p>
+
+<p style="font-family: Times New Roman, Times, serif;
+	
+	color:#BEBFC1;
+	font-size:22px;"><u>183 reviews</u></p>
+
+
+<p><span style="border: 2px solid #D1D3D6;
+background-color:white;
+font-size:18px;	
+color:#AEB6C2;
+float:left;
+height:20px;
+padding:20px;
 ">1 pcs</span> 
 <button class="addtochart" type="button">Add to cart</button>
 </p>
