--- a/ECOM_EXAMPLE.html
+++ b/ECOM_EXAMPLE.html
@@ -10,12 +10,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <div class="div1">
-      <div class="div1_1">
-        <p id="p1" class="starter_kit">Starterkit</p>
+    <div class="starter_kit">
+      <div class="starter_kit_div1">
+        <p id="p1" class="starter_kit_header">Starterkit</p>
       </div>
 
-      <div class="div1_2">
+      <div class="starter_kit_div2">
         <input
           style="height: 27px; float: left; border: none"
           type="text"
@@ -29,7 +29,7 @@
         ></i>
       </div>
 
-      <div class="div1_3">
+      <div class="starter_kit_div3">
         <i
           class="fa fa-user"
           style="
@@ -40,13 +40,13 @@
             display: inline-block;
           "
         ></i>
-        <button id="b12" class="pay_button1" type="button">117 USD</button>
+        <button id="b12" class="starter_kit_btn" type="button">117 USD</button>
       </div>
     </div>
 
     <br />
 
-    <div class="div2">
+    <div class="category">
       <select class="dropdown" name="Category" id="Category">
         <option value="Category">Category</option>
         <option value="Category">Category</option>
@@ -72,7 +72,7 @@
 
     <br />
 
-    <div>
+    <div class="categories_2">
       <h1 class="h11">Categories</h1>
       <div class="grid-container">
         <div class="grid-item">
@@ -259,11 +259,11 @@
         </div>
       </div>
     </div>
-    <div>
+    <div class="related_products">
       <h1 class="h12">Related products</h1>
       <div class="grid-container">
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -278,12 +278,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="num_of_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -298,12 +298,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -318,12 +318,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -338,12 +338,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -358,12 +358,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -378,12 +378,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -398,12 +398,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -418,12 +418,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -438,12 +438,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -458,12 +458,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -478,12 +478,12 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
 
         <div class="grid-item2">
-          <div class="Img1">
+          <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
@@ -498,48 +498,42 @@
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
             <span class="numof_category">1 pcs</span>
-            <button class="add_to_chart" type="button">Add to cart</button>
+            <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
       </div>
     </div>
-
     <br />
-    <div class="div5">
-      <div class="div5_p">
-        Love those products?<span
-          style="
-            font-size: 15px;
-            font-family: Arial, Helvetica, sans-serif;
-            color: #bebfc1;
-            font-weight: none;
-          "
+
+    <div class="love_product">
+      <div class="love_product_p">
+        Love those products?<span class="love_product_span"
           >Check more from the</span
         >
         <u style="color: #2797ea"> Category</u>
       </div>
-      <div class="div5_show_more">Show more</div>
+      <div class="love_product_show_more">Show more</div>
     </div>
 
     <br />
 
-    <div class="div6">
-      <p class="div6_header">Testmotionals</p>
+    <div class="Testmotionals">
+      <p class="Testmotionals_header">Testmotionals</p>
 
-      <div class="div6_1">
-        <div class="div6_1_1">
-          <p class="div6_p1">
+      <div class="Testmotionals_div1">
+        <div class="Testmotionals_div1_div1">
+          <p class="Testmotionals_p1">
             We got trusted by more than<br />
             <span style="color: #2797ea; font-weight: bold">+4800</span> happy
             customers.
           </p>
         </div>
-        <div class="div6_1_2">
+        <div class="Testmotionals_div1_div2">
           <p>
-            <q class="div6_p2"
+            <q class="Testmotionals_p2"
               >Space for a Quote of your customer. Make it<br />
               easy to read and valuable to make impact.</q
-            ><br /><span class="div6_p3"
+            ><br /><span class="Testmotionals_p3"
               >Name and Surname -
               <span style="color: #bebfc1">Company</span></span
             >
@@ -547,43 +541,45 @@
         </div>
       </div>
       <hr />
-      <div class="div6_2">
+      <div class="Testmotionals_div2">
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
-        <p class="reviews"><u>183 reviews</u></p>
-        <button class="div6_btn" type="button">Read All reviews</button>
+        <p class="Testmotionals_reviews"><u>183 reviews</u></p>
+        <button class="Testmotionals_btn" type="button">
+          Read All reviews
+        </button>
       </div>
     </div>
 
     <br />
 
-    <div class="div7">
-      <div class="div7_1">
-        <p class="div7_p1">
+    <div class="subscribe">
+      <div class="subscribe_div1">
+        <p class="subscribe_p1">
           Subscribe to newsletter<br /><span class="check"
             >By subscribing you agree with our Terms and Conditions.</span
           >
         </p>
       </div>
-      <div class="div7_2">
-        <p class="div7_p2">Email Address</p>
+      <div class="subscribe_div2">
+        <p class="subscribe_p2">Email Address</p>
 
         <p>
           <input
-            class="div7_input"
+            class="subscribe_input"
             type="text"
             id="email"
             name="email"
             placeholder="Text Field"
           />
 
-          <button class="div7_btn" type="button">Subscribe</button>
+          <button class="subscribe_btn" type="button">Subscribe</button>
         </p>
 
-        <p class="div7_p3">
+        <p class="subscribe_p3">
           By subscribing you agree with our <u>Terms and Conditions.</u>
         </p>
       </div>
