--- a/ECOM_EXAMPLE.html
+++ b/ECOM_EXAMPLE.html
@@ -297,7 +297,7 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
@@ -317,7 +317,7 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
@@ -337,7 +337,7 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
@@ -357,7 +357,7 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
@@ -377,7 +377,7 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
@@ -397,7 +397,7 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
@@ -417,7 +417,7 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
@@ -437,7 +437,7 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
@@ -457,11 +457,10 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
-
         <div class="grid-item2">
           <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
@@ -477,11 +476,10 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
-
         <div class="grid-item2">
           <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
@@ -497,7 +495,7 @@
           </p>
           <p class="category_reviews"><u>183 reviews</u></p>
           <p>
-            <span class="numof_category">1 pcs</span>
+            <span class="num_of_category">1 pcs</span>
             <button class="category_btn" type="button">Add to cart</button>
           </p>
         </div>
