--- a/ECOM_EXAMPLE.html
+++ b/ECOM_EXAMPLE.html
@@ -17,7 +17,8 @@
 
       <div class="starter_kit_div2">
         <input
-          style="height: 37px; float: left; border: none"
+        class="starter_kit_div2_input"
+          
           type="text"
           id="Search"
           name="Search"
