--- a/ECOM_EXAMPLE.html
+++ b/ECOM_EXAMPLE.html
@@ -60,9 +60,7 @@
             "
           ></i>
 
-          <button id="b12" class="starter_kit_btn" type="button">
-            117 USD
-          </button>
+          <button id="b12" class="starter_kit_btn" type="button">117 USD</button>
         </div>
       </div>
     </div>
@@ -326,7 +324,7 @@
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price1">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -337,8 +335,8 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs1">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price1','num_of_pcs1')" type="button">Add to cart</button>
           </div>
         </div>
 
@@ -347,7 +345,7 @@
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price2">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -358,16 +356,17 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs2">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price2','num_of_pcs2')" type="button">Add to cart</button>
           </div>
         </div>
+       
         <div class="grid-item2">
           <div class="category_Img1">
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price3">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -378,29 +377,8 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
-          </div>
-        </div>
-
-        <div class="grid-item2">
-          <div class="category_Img1">
-            <img src="icon.png" class="center" alt="Product" height="50px" />
-          </div>
-          <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
-          <p>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-            <span class="fa fa-star checked"></span>
-          </p>
-          <p class="category_reviews"><u>183 reviews</u></p>
-
-          <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs3">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price3','num_of_pcs3')" type="button">Add to cart</button>
           </div>
         </div>
 
@@ -409,7 +387,7 @@
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price4">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -420,8 +398,8 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs4">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price4','num_of_pcs4')" type="button">Add to cart</button>
           </div>
         </div>
 
@@ -430,7 +408,7 @@
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price5">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -441,8 +419,8 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs5">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price5','num_of_pcs5')" type="button">Add to cart</button>
           </div>
         </div>
 
@@ -451,7 +429,7 @@
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price6">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -462,8 +440,8 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs6">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price6','num_of_pcs6')" type="button">Add to cart</button>
           </div>
         </div>
 
@@ -472,7 +450,7 @@
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price7">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -483,8 +461,8 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs7">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price7','num_of_pcs7')" type="button">Add to cart</button>
           </div>
         </div>
 
@@ -493,7 +471,7 @@
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price8">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -504,8 +482,28 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs8">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price8','num_of_pcs8')" type="button">Add to cart</button>
+          </div>
+        </div>
+        <div class="grid-item2">
+          <div class="category_Img1">
+            <img src="icon.png" class="center" alt="Product" height="50px" />
+          </div>
+          <p class="la">Space for product name belongs here</p>
+          <p class="category_price" id="price9">36.99 USD</p>
+          <p>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+          </p>
+          <p class="category_reviews"><u>183 reviews</u></p>
+
+          <div class="related_products_last">
+            <span class="num_of_category" id="num_of_pcs9">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price9','num_of_pcs9')" type="button">Add to cart</button>
           </div>
         </div>
 
@@ -514,7 +512,7 @@
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price10">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -525,8 +523,8 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs10">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price1','num_of_pcs10')" type="button">Add to cart</button>
           </div>
         </div>
 
@@ -535,7 +533,7 @@
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price11">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -546,8 +544,8 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs11">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price11','num_of_pcs11')" type="button">Add to cart</button>
           </div>
         </div>
 
@@ -556,7 +554,7 @@
             <img src="icon.png" class="center" alt="Product" height="50px" />
           </div>
           <p class="la">Space for product name belongs here</p>
-          <p class="category_price">36.99 USD</p>
+          <p class="category_price" id="price12">36.99 USD</p>
           <p>
             <span class="fa fa-star checked"></span>
             <span class="fa fa-star checked"></span>
@@ -567,10 +565,11 @@
           <p class="category_reviews"><u>183 reviews</u></p>
 
           <div class="related_products_last">
-            <span class="num_of_category">1 pcs</span>
-            <button class="category_btn" type="button">Add to cart</button>
+            <span class="num_of_category" id="num_of_pcs12">1 pcs</span>
+            <button class="category_btn" onclick="addprice('price12','num_of_pcs12')" type="button">Add to cart</button>
           </div>
         </div>
+
       </div>
     </div>
     <br />
@@ -654,5 +653,31 @@
         </p>
       </div>
     </div>
+
+
+
+    <script>
+
+     function addprice(a,b){
+     var button_price= document.getElementById('b12').textContent.toString();
+     var price= document.getElementById(a).textContent.toString();
+     var total=button_price.split(" ");
+     var cag_price= price.split(" ");
+     var total_price=parseFloat(total[0]);
+     var category_price=parseFloat(cag_price[0]);
+     var final_price= total_price+category_price; 
+     //alert(final_price.toFixed(2));
+     var pics_text= document.getElementById(b).textContent.toString();
+     var num_of_pcs=pics_text.split(" ");
+     var final_num_of_pcs= parseInt(num_of_pcs[0]) +1;
+      document.getElementById('b12').textContent=final_price.toFixed(2).toString()+" USD"
+      document.getElementById(b).textContent=final_num_of_pcs.toString()+" pcs"
+      
+     }
+
+
+
+
+      </script>
   </body>
 </html>
